--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adibenmatdev/web-auto-extractor",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "Automatically extracts structured information from webpages - with json repair",
   "main": "dist/index.js",
   "scripts": {
@@ -15,12 +15,14 @@
   },
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "^6.8.0",
-    "cheerio": "^1.0.0-rc.12",
-    "htmlparser2": "^3.9.1",
-    "jsonrepair": "^3.7.0"
+    "babel-polyfill": "6.8.0",
+    "cheerio": "1.0.0-rc.12",
+    "htmlparser2": "3.9.1",
+    "jsonrepair": "3.7.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.3",
+    "@babel/register": "^7.24.6",
     "babel-cli": "^6.8.0",
     "babel-eslint": "^6.0.4",
     "babel-preset-es2015": "^6.6.0",
