--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adibenmatdev/web-auto-extractor",
-  "version": "1.0.5",
+  "version": "1.0.9",
   "description": "Automatically extracts structured information from webpages - with json repair",
   "main": "dist/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "test": "mocha --recursive --compilers js:babel-register",
     "lint": "standard",
     "dev": "nodemon --exec npm run lint",
-    "prepublish": "npm run test && npm run build"
+    "prepublish": "npm run build && npm run test"
   },
   "engines": {
     "node": ">=4.4"
